test/compare/testdata/scripts/no_statement.sgo
// errorcheck

:  // ERROR `unexpected :, expected statement`
∞  // ERROR `illegal character U+221E '∞'`
}  // ERROR `unexpected }, expecting statement`

return  // ERROR `return statement outside function body`
